# libLC3plus

./: CMakeLists.txt  LC3plus.pc.in  LICENSE  README.md
